AnalizadorSintactico/expresiones.output
Terminales no usados en la gramática

   "||"
   "&&"
   '!'
   "<="
   ">="
   "=="
   "!="


Estado 19 conflictos: 14 desplazamiento/reducción
Estado 20 conflictos: 6 desplazamiento/reducción
Estado 40 conflictos: 14 desplazamiento/reducción
Estado 41 conflictos: 14 desplazamiento/reducción
Estado 42 conflictos: 14 desplazamiento/reducción
Estado 43 conflictos: 14 desplazamiento/reducción
Estado 44 conflictos: 14 desplazamiento/reducción
Estado 45 conflictos: 14 desplazamiento/reducción
Estado 46 conflictos: 6 desplazamiento/reducción
Estado 47 conflictos: 6 desplazamiento/reducción
Estado 48 conflictos: 6 desplazamiento/reducción
Estado 49 conflictos: 6 desplazamiento/reducción
Estado 50 conflictos: 6 desplazamiento/reducción
Estado 51 conflictos: 6 desplazamiento/reducción
Estado 52 conflictos: 6 desplazamiento/reducción
Estado 53 conflictos: 6 desplazamiento/reducción


Gramática

    0 $accept: entrada $end

    1 entrada: %empty
    2        | entrada linea

    3 linea: expr '\n'
    4      | asignacion '\n'
    5      | SALIR '\n'
    6      | error '\n'

    7 expr: ENTERO
    8     | REAL
    9     | BOOL
   10     | expr AND expr
   11     | expr OR expr
   12     | NOT expr
   13     | comp
   14     | expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '%' expr
   19     | expr '^' expr
   20     | '-' expr
   21     | '(' expr ')'

   22 comp: expr '<' expr
   23     | expr LE expr
   24     | expr '>' expr
   25     | expr GE expr
   26     | expr EQ expr
   27     | expr NE expr

   28 asignacion: IDENTIFICADOR '=' expr


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5 6
'!' (33)
'%' (37) 18
'(' (40) 21
')' (41) 21
'*' (42) 16
'+' (43) 14
'-' (45) 15 20
'/' (47) 17
'<' (60) 22
'=' (61) 28
'>' (62) 24
'^' (94) 19
error (256) 6
ENTERO (258) 7
IDENTIFICADOR (259) 28
REAL (260) 8
SALIR (261) 5
BOOL (262) 9
LE (263) 23
GE (264) 25
EQ (265) 26
NE (266) 27
AND (267) 10
OR (268) 11
NOT (269) 12
"||" (270)
"&&" (271)
"<=" (272)
">=" (273)
"==" (274)
"!=" (275)
menos (276)


No terminales con las reglas donde aparecen

$accept (35)
    en la izquierda: 0
entrada (36)
    en la izquierda: 1 2, en la derecha: 0 2
linea (37)
    en la izquierda: 3 4 5 6, en la derecha: 2
expr (38)
    en la izquierda: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, en la derecha:
    3 10 11 12 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
comp (39)
    en la izquierda: 22 23 24 25 26 27, en la derecha: 13
asignacion (40)
    en la izquierda: 28, en la derecha: 4


Estado 0

    0 $accept: . entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada . $end
    2 entrada: entrada . linea

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    ENTERO         desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    REAL           desplazar e ir al estado 6
    SALIR          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 9
    '-'            desplazar e ir al estado 10
    '('            desplazar e ir al estado 11

    linea       ir al estado 12
    expr        ir al estado 13
    comp        ir al estado 14
    asignacion  ir al estado 15


Estado 2

    0 $accept: entrada $end .

    $default  aceptar


Estado 3

    6 linea: error . '\n'

    '\n'  desplazar e ir al estado 16


Estado 4

    7 expr: ENTERO .

    $default  reduce usando la regla 7 (expr)


Estado 5

   28 asignacion: IDENTIFICADOR . '=' expr

    '='  desplazar e ir al estado 17


Estado 6

    8 expr: REAL .

    $default  reduce usando la regla 8 (expr)


Estado 7

    5 linea: SALIR . '\n'

    '\n'  desplazar e ir al estado 18


Estado 8

    9 expr: BOOL .

    $default  reduce usando la regla 9 (expr)


Estado 9

   12 expr: NOT . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 19
    comp  ir al estado 14


Estado 10

   20 expr: '-' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 20
    comp  ir al estado 14


Estado 11

   21 expr: '(' . expr ')'

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 21
    comp  ir al estado 14


Estado 12

    2 entrada: entrada linea .

    $default  reduce usando la regla 2 (entrada)


Estado 13

    3 linea: expr . '\n'
   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE    desplazar e ir al estado 22
    GE    desplazar e ir al estado 23
    EQ    desplazar e ir al estado 24
    NE    desplazar e ir al estado 25
    AND   desplazar e ir al estado 26
    OR    desplazar e ir al estado 27
    '<'   desplazar e ir al estado 28
    '>'   desplazar e ir al estado 29
    '+'   desplazar e ir al estado 30
    '-'   desplazar e ir al estado 31
    '*'   desplazar e ir al estado 32
    '/'   desplazar e ir al estado 33
    '%'   desplazar e ir al estado 34
    '^'   desplazar e ir al estado 35
    '\n'  desplazar e ir al estado 36


Estado 14

   13 expr: comp .

    $default  reduce usando la regla 13 (expr)


Estado 15

    4 linea: asignacion . '\n'

    '\n'  desplazar e ir al estado 37


Estado 16

    6 linea: error '\n' .

    $default  reduce usando la regla 6 (linea)


Estado 17

   28 asignacion: IDENTIFICADOR '=' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 38
    comp  ir al estado 14


Estado 18

    5 linea: SALIR '\n' .

    $default  reduce usando la regla 5 (linea)


Estado 19

   10 expr: expr . AND expr
   11     | expr . OR expr
   12     | NOT expr .
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 12 (expr)]
    GE        [reduce usando la regla 12 (expr)]
    EQ        [reduce usando la regla 12 (expr)]
    NE        [reduce usando la regla 12 (expr)]
    AND       [reduce usando la regla 12 (expr)]
    OR        [reduce usando la regla 12 (expr)]
    '<'       [reduce usando la regla 12 (expr)]
    '>'       [reduce usando la regla 12 (expr)]
    '+'       [reduce usando la regla 12 (expr)]
    '-'       [reduce usando la regla 12 (expr)]
    '*'       [reduce usando la regla 12 (expr)]
    '/'       [reduce usando la regla 12 (expr)]
    '%'       [reduce usando la regla 12 (expr)]
    '^'       [reduce usando la regla 12 (expr)]
    $default  reduce usando la regla 12 (expr)


Estado 20

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   20     | '-' expr .
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27

    LE        [reduce usando la regla 20 (expr)]
    GE        [reduce usando la regla 20 (expr)]
    EQ        [reduce usando la regla 20 (expr)]
    NE        [reduce usando la regla 20 (expr)]
    AND       [reduce usando la regla 20 (expr)]
    OR        [reduce usando la regla 20 (expr)]
    $default  reduce usando la regla 20 (expr)


Estado 21

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   21     | '(' expr . ')'
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35
    ')'  desplazar e ir al estado 39


Estado 22

   23 comp: expr LE . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 40
    comp  ir al estado 14


Estado 23

   25 comp: expr GE . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 41
    comp  ir al estado 14


Estado 24

   26 comp: expr EQ . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 42
    comp  ir al estado 14


Estado 25

   27 comp: expr NE . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 43
    comp  ir al estado 14


Estado 26

   10 expr: expr AND . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 44
    comp  ir al estado 14


Estado 27

   11 expr: expr OR . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 45
    comp  ir al estado 14


Estado 28

   22 comp: expr '<' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 46
    comp  ir al estado 14


Estado 29

   24 comp: expr '>' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 47
    comp  ir al estado 14


Estado 30

   14 expr: expr '+' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 48
    comp  ir al estado 14


Estado 31

   15 expr: expr '-' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 49
    comp  ir al estado 14


Estado 32

   16 expr: expr '*' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 50
    comp  ir al estado 14


Estado 33

   17 expr: expr '/' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 51
    comp  ir al estado 14


Estado 34

   18 expr: expr '%' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 52
    comp  ir al estado 14


Estado 35

   19 expr: expr '^' . expr

    ENTERO  desplazar e ir al estado 4
    REAL    desplazar e ir al estado 6
    BOOL    desplazar e ir al estado 8
    NOT     desplazar e ir al estado 9
    '-'     desplazar e ir al estado 10
    '('     desplazar e ir al estado 11

    expr  ir al estado 53
    comp  ir al estado 14


Estado 36

    3 linea: expr '\n' .

    $default  reduce usando la regla 3 (linea)


Estado 37

    4 linea: asignacion '\n' .

    $default  reduce usando la regla 4 (linea)


Estado 38

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr
   28 asignacion: IDENTIFICADOR '=' expr .

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 28 (asignacion)


Estado 39

   21 expr: '(' expr ')' .

    $default  reduce usando la regla 21 (expr)


Estado 40

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   23     | expr LE expr .
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 23 (comp)]
    GE        [reduce usando la regla 23 (comp)]
    EQ        [reduce usando la regla 23 (comp)]
    NE        [reduce usando la regla 23 (comp)]
    AND       [reduce usando la regla 23 (comp)]
    OR        [reduce usando la regla 23 (comp)]
    '<'       [reduce usando la regla 23 (comp)]
    '>'       [reduce usando la regla 23 (comp)]
    '+'       [reduce usando la regla 23 (comp)]
    '-'       [reduce usando la regla 23 (comp)]
    '*'       [reduce usando la regla 23 (comp)]
    '/'       [reduce usando la regla 23 (comp)]
    '%'       [reduce usando la regla 23 (comp)]
    '^'       [reduce usando la regla 23 (comp)]
    $default  reduce usando la regla 23 (comp)


Estado 41

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   25     | expr GE expr .
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 25 (comp)]
    GE        [reduce usando la regla 25 (comp)]
    EQ        [reduce usando la regla 25 (comp)]
    NE        [reduce usando la regla 25 (comp)]
    AND       [reduce usando la regla 25 (comp)]
    OR        [reduce usando la regla 25 (comp)]
    '<'       [reduce usando la regla 25 (comp)]
    '>'       [reduce usando la regla 25 (comp)]
    '+'       [reduce usando la regla 25 (comp)]
    '-'       [reduce usando la regla 25 (comp)]
    '*'       [reduce usando la regla 25 (comp)]
    '/'       [reduce usando la regla 25 (comp)]
    '%'       [reduce usando la regla 25 (comp)]
    '^'       [reduce usando la regla 25 (comp)]
    $default  reduce usando la regla 25 (comp)


Estado 42

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   26     | expr EQ expr .
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 26 (comp)]
    GE        [reduce usando la regla 26 (comp)]
    EQ        [reduce usando la regla 26 (comp)]
    NE        [reduce usando la regla 26 (comp)]
    AND       [reduce usando la regla 26 (comp)]
    OR        [reduce usando la regla 26 (comp)]
    '<'       [reduce usando la regla 26 (comp)]
    '>'       [reduce usando la regla 26 (comp)]
    '+'       [reduce usando la regla 26 (comp)]
    '-'       [reduce usando la regla 26 (comp)]
    '*'       [reduce usando la regla 26 (comp)]
    '/'       [reduce usando la regla 26 (comp)]
    '%'       [reduce usando la regla 26 (comp)]
    '^'       [reduce usando la regla 26 (comp)]
    $default  reduce usando la regla 26 (comp)


Estado 43

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr
   27     | expr NE expr .

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 27 (comp)]
    GE        [reduce usando la regla 27 (comp)]
    EQ        [reduce usando la regla 27 (comp)]
    NE        [reduce usando la regla 27 (comp)]
    AND       [reduce usando la regla 27 (comp)]
    OR        [reduce usando la regla 27 (comp)]
    '<'       [reduce usando la regla 27 (comp)]
    '>'       [reduce usando la regla 27 (comp)]
    '+'       [reduce usando la regla 27 (comp)]
    '-'       [reduce usando la regla 27 (comp)]
    '*'       [reduce usando la regla 27 (comp)]
    '/'       [reduce usando la regla 27 (comp)]
    '%'       [reduce usando la regla 27 (comp)]
    '^'       [reduce usando la regla 27 (comp)]
    $default  reduce usando la regla 27 (comp)


Estado 44

   10 expr: expr . AND expr
   10     | expr AND expr .
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 10 (expr)]
    GE        [reduce usando la regla 10 (expr)]
    EQ        [reduce usando la regla 10 (expr)]
    NE        [reduce usando la regla 10 (expr)]
    AND       [reduce usando la regla 10 (expr)]
    OR        [reduce usando la regla 10 (expr)]
    '<'       [reduce usando la regla 10 (expr)]
    '>'       [reduce usando la regla 10 (expr)]
    '+'       [reduce usando la regla 10 (expr)]
    '-'       [reduce usando la regla 10 (expr)]
    '*'       [reduce usando la regla 10 (expr)]
    '/'       [reduce usando la regla 10 (expr)]
    '%'       [reduce usando la regla 10 (expr)]
    '^'       [reduce usando la regla 10 (expr)]
    $default  reduce usando la regla 10 (expr)


Estado 45

   10 expr: expr . AND expr
   11     | expr . OR expr
   11     | expr OR expr .
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '<'  desplazar e ir al estado 28
    '>'  desplazar e ir al estado 29
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 11 (expr)]
    GE        [reduce usando la regla 11 (expr)]
    EQ        [reduce usando la regla 11 (expr)]
    NE        [reduce usando la regla 11 (expr)]
    AND       [reduce usando la regla 11 (expr)]
    OR        [reduce usando la regla 11 (expr)]
    '<'       [reduce usando la regla 11 (expr)]
    '>'       [reduce usando la regla 11 (expr)]
    '+'       [reduce usando la regla 11 (expr)]
    '-'       [reduce usando la regla 11 (expr)]
    '*'       [reduce usando la regla 11 (expr)]
    '/'       [reduce usando la regla 11 (expr)]
    '%'       [reduce usando la regla 11 (expr)]
    '^'       [reduce usando la regla 11 (expr)]
    $default  reduce usando la regla 11 (expr)


Estado 46

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   22     | expr '<' expr .
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 22 (comp)]
    GE        [reduce usando la regla 22 (comp)]
    EQ        [reduce usando la regla 22 (comp)]
    NE        [reduce usando la regla 22 (comp)]
    AND       [reduce usando la regla 22 (comp)]
    OR        [reduce usando la regla 22 (comp)]
    $default  reduce usando la regla 22 (comp)


Estado 47

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   24     | expr '>' expr .
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '+'  desplazar e ir al estado 30
    '-'  desplazar e ir al estado 31
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 24 (comp)]
    GE        [reduce usando la regla 24 (comp)]
    EQ        [reduce usando la regla 24 (comp)]
    NE        [reduce usando la regla 24 (comp)]
    AND       [reduce usando la regla 24 (comp)]
    OR        [reduce usando la regla 24 (comp)]
    $default  reduce usando la regla 24 (comp)


Estado 48

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   14     | expr '+' expr .
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 14 (expr)]
    GE        [reduce usando la regla 14 (expr)]
    EQ        [reduce usando la regla 14 (expr)]
    NE        [reduce usando la regla 14 (expr)]
    AND       [reduce usando la regla 14 (expr)]
    OR        [reduce usando la regla 14 (expr)]
    $default  reduce usando la regla 14 (expr)


Estado 49

   10 expr: expr . AND expr
   11     | expr . OR expr
   14     | expr . '+' expr
   15     | expr . '-' expr
   15     | expr '-' expr .
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '^' expr
   22 comp: expr . '<' expr
   23     | expr . LE expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . EQ expr
   27     | expr . NE expr

    LE   desplazar e ir al estado 22
    GE   desplazar e ir al estado 23
    EQ   desplazar e ir al estado 24
    NE   desplazar e ir al estado 25
    AND  desplazar e ir al estado 26
    OR   desplazar e ir al estado 27
    '*'  desplazar e ir al estado 32
    '/'  desplazar e ir al estado 33
    '%'  desplazar e ir al estado 34
    '^'  desplazar e ir al estado 35

    LE        [reduce usando la regla 15 (expr)]
    GE        [reduce usando la regla 15 (expr)]
    EQ        [reduce usando la regla 15 (expr)]
    NE        [reduce usando la regla 15 (expr)]
    AND       [reduce usando la regla 15 (expr)]
    OR        [reduce usando la regla 15 (expr)]
    $default  reduce usando la regla 15 (expr)


Estado 50
